--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,5 +5,8 @@
 
 /* import sections */
 @import "sections/general";
-@import "sections/sidebar";
 @import "sections/header";
+@import "sections/sidebar";
+@import "sections/panel";
+@import "sections/general-stats";
+@import "sections/links";
