--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -1,4 +1,4 @@
-.topnav{
+.topnav, .sidenav{
   display: flex;
   flex-direction: row;
   color: black;
@@ -12,7 +12,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 1%;
-    border-left: $sidebar-font 1px solid;
+    border-left: $line 1px solid;
     color: $sidebar-font;
     
     > *{
@@ -23,8 +23,14 @@
   &__option{
     &--large{
       font-size: $wallet-size;
-      font-family: $paragraph-font;
-      font-weight: 400;
+      font-family: $side-bar-menu-font;
+      font-weight: 600;
     }
+  }
+}
+
+@media (max-width: 992px) {
+  .header{
+    display: none;
   }
 }
