--- a/src/sass/sections/_sidebar.scss
+++ b/src/sass/sections/_sidebar.scss
@@ -1,5 +1,4 @@
 .option__link, .title {
-  padding-left: 15px;
   display: flex;
   align-items: center;
 }
@@ -9,12 +8,14 @@
   flex-direction: column;
   font-family: $side-bar-menu-font;
   font-size: $sidebar-font-size;
+  margin-top: 10px;
   margin-left: 0;
-  padding: 30px 0;
+  padding: 15px 0;
   border-bottom: $line 1px solid;
   
   
   &__link{ 
+    padding-left: 15px;
     border-left: $sidebar-background 4px solid;
     height: 50px;
     line-height: 30px;
@@ -25,57 +26,148 @@
     .icon{
       margin-right: 10%;
     }
-  
-    &:hover{
-      color: $active-link;
-      background-color: $active-background;
-      border-left: $accent 4px solid;
-    }
   }  
 }
 
+.option__link:hover, .active{
+  color: $active-link;
+  background-color: $active-background;
+  border-left: $accent 4px solid;
+}
+
 .title{
-  position: relative;
+  background-color: $sidebar-background;
+  width: 15vw;
+  height: 50px;
+  padding-bottom: 10px;
 
   &__logo{
-    background-color: $sidebar-background;
     color: $sidebar-font;
-    font-size: 30px;
+    font-size: $logo-font-size;
     margin-top: 10px;
     color: $logo;
     font-family: $logo-font;
+    padding-left: 10px;
   }
+}
 
-  .hamburger {
-    color: $logo;
-    font-size: 30px;
-    position: absolute;
-    right: 5%;
-    top: 15px;
-  }
+.hamburger {
+  color: $logo;
+  font-size: 30px;
+  position: absolute;
+  right: 5%;
+  top: 5px;
 }
 
 .manager{
   &__heading{
     padding: 5%;
     text-transform: uppercase;
+    font-family: $side-bar-menu-font;
+    font-weight: 600;
   }
 
   &__prev{
-    display: flex;
-    align-items: center;
     padding: 5% 10%;
+    position: relative;
 
     &__img{
       width: 50px;
       height: 50px;
       border-radius: 25px;
-      background-color: rgb(41, 204, 41);
       margin-right: 5%;
+      position: relative;
+    }
+    
+    &__status{
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      border-radius: 5px;
+      background-color: green;
+      top: 15%;
+      left: 25%;
     }
 
     &__name{
-      padding-left: 5%;
+      position: absolute;
+      left: 100px;
+      top: 30px;
+    }
+  }
+}
+
+.sidenav{
+  display: none;
+}
+
+@media (max-width: 992px) {
+  .sidebar{
+    position: relative;
+    width: 100%;
+    // position: absolute;
+    // width: 100vw;
+    // height: auto;
+    // top: 0;
+  }
+
+  .title{
+    font-size: 10px;
+    position: relative;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 0;
+  }
+
+  .sidenav{
+    display: flex;
+    flex-direction: column;
+  
+    &__option{
+      width: 60%;
+      border: none;
+      padding-left: 15px;
+      height: 50px;
+      line-height: 30px;
+      text-decoration: none;
+      list-style: none;
+      color: $sidebar-font;
+    }
+  }
+  
+  .input-box:checked{
+    display: block;
+  }
+
+  .manager{
+    border-bottom: $line 1px solid;
+
+    &__prev{
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      
+      &__img{
+        position: relative;
+        padding: 0;
+        margin: 0;
+        margin-right: 10%;
+      }
+
+      &__name{
+        position: relative;
+        top: 0;
+        left: 0;
+        padding: 0;
+        margin: 0;
+      }
+
+      &__status{
+        display: none;
+      }
     }
   }
 }
