Add new pages: details, popusp

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,6 +13,11 @@ $hover-link: rgba(220,220,220, 0.5);
 $accent: #F58220;
 $logo: white;
 $link: #6D92AC;
+$pages-hover: rgba(109, 146, 172, 0.4);
+$button-color: white;
+$status-online: rgb(6, 219, 6);
+$speech-sent: rgba(0, 0, 0, 0.5);
+$speech-recv: rgba(0, 0, 0, 0.3);
 
 /* Effects */
 $hover-panel: 5px 3px 10px rgba(220,220,220, 0.5);
@@ -24,6 +29,8 @@ $wallet-size: 20px;
 $header-font-size: 16px;
 $phone-font-size: 10px;
 $logo-font-size: 25px;
+$pages-size: 20px;
+$card-size: 25px;
 
 /* Fonts */
 $brand-font: "Open Sans", Helvetica, Arial;
