--- a/src/sass/components/_table.scss
+++ b/src/sass/components/_table.scss
@@ -72,3 +72,12 @@
     }
   }
 }
+
+@media (max-width: 992px) {
+  .table{
+    &__header{
+      font-size: 10px;
+    }
+    font-size: 10px;
+  }
+}
