--- a/src/sass/sections/_general.scss
+++ b/src/sass/sections/_general.scss
@@ -22,6 +22,7 @@
   
   &:hover{
     transform: scale(1.2);
+    cursor: pointer;
   }
 }
 
@@ -30,5 +31,10 @@
   .btn{
     font-size: $phone-font-size;
     color: $button-color;
+
+    &:hover {
+      transform: none;
+    }
+
   }
 }
