--- a/src/sass/sections/_sidebar.scss
+++ b/src/sass/sections/_sidebar.scss
@@ -1,3 +1,5 @@
+@import '../components/manager';
+
 .option__link, .title {
   display: flex;
   align-items: center;
@@ -48,6 +50,7 @@
     color: $logo;
     font-family: $logo-font;
     padding-left: 10px;
+    padding-bottom: 4px;
   }
 }
 
@@ -57,43 +60,9 @@
   position: absolute;
   right: 5%;
   top: 5px;
-}
 
-.manager{
-  &__heading{
-    padding: 5%;
-    text-transform: uppercase;
-    font-family: $side-bar-menu-font;
-    font-weight: 600;
-  }
-
-  &__prev{
-    padding: 5% 10%;
-    position: relative;
-
-    &__img{
-      width: 50px;
-      height: 50px;
-      border-radius: 25px;
-      margin-right: 5%;
-      position: relative;
-    }
-    
-    &__status{
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      border-radius: 5px;
-      background-color: green;
-      top: 15%;
-      left: 25%;
-    }
-
-    &__name{
-      position: absolute;
-      left: 100px;
-      top: 30px;
-    }
+  &:hover{
+    cursor: pointer;
   }
 }
 
@@ -169,5 +138,9 @@
         display: none;
       }
     }
+  }
+
+  .sidebar-toggle.hidden{
+    display: none;
   }
 }
