--- a/src/sass/components/_date-picker.scss
+++ b/src/sass/components/_date-picker.scss
@@ -6,7 +6,7 @@
   padding: 30px 0;
 
   &__calendar{
-    width: 30%;
+    width: 60%;
     height: 40px;
     border: $line 1px solid;
     border-radius: 3px;
@@ -30,16 +30,26 @@
     border: none;
     color: $sidebar-font;
     font-family: $paragraph-font;
+    flex-basis: 45%;
+    text-align: center;
   }
 
   .icon-calendar{
     padding: 0 10px;
     border-left: $line 1px solid;
     font-size: 20px;
+    flex-basis: 5%;
   }
 }
 
 @media (max-width: 992px) {
+  .calendar{
+    width: 70%;
+    margin: 0 5px;
+  }
+}
+
+@media (max-width:768px) {  
   .calendar{
     width: 90%;
     margin: 0 5px;
